bin_PROGRAMS = pse2pgcopy wtn2pgcopy wtn2pgcopy_lsg wth2pgcopy

pse2pgcopy_SOURCES = pse2pgcopy.c
pse2pgcopy_LDADD = ../lib/libalsep.a

wtn2pgcopy_SOURCES = wtn2pgcopy.c
wtn2pgcopy_LDADD = ../lib/libalsep.a

wtn2pgcopy_lsg_SOURCES = wtn2pgcopy_lsg.c
wtn2pgcopy_lsg_LDADD = ../lib/libalsep.a

wth2pgcopy_SOURCES = wth2pgcopy.c
wth2pgcopy_LDADD = ../lib/libalsep.a

AM_CPPFLAGS = -I$(top_srcdir)/lib
